# Logger

./: .gitignore  BuildAll.sh  CMakeLists.txt  LoggerProjectConfig.h.in
Logger/: CMakeLists.txt
Logger/include/: Logger.h  LoggerSink.h  LoggerTypes.h
Logger/src/: Logger.cpp  LoggerMacros.h  LoggerSink.cpp  LoggerTypes.cpp
Tests/: MainApp.cpp
